# blogmarks

./: .flake8  .gitignore  README.md  _config.yml  archive.html  conf.py  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
2020/: index.html
2021/: index.html
2022/: index.html
2023/: index.html
2024/: index.html
2025/: index.html
2026/: index.html
_includes/: head.html  post_li.html
_layouts/: post.html
_posts/: 2020-05-23-1hello.md  2020-05-23-2poetry.md  2020-05-24-modern-python-dictionaries.md  2020-05-24-python-expert.md  2020-05-25-package-manager.md  2020-05-27-ssh-tunnel.md  2020-05-28-pspg.md  2020-06-01-q.md  2020-06-06-time-machine.md  2020-06-09-xpath.md  2020-06-14-python-warnings.md  2020-06-16-tldr.md  2020-06-20-postgres-running-queries.md  2020-06-25-moto.md  2020-06-27-mailtrap.md  2020-06-30-commit-timestamps.md  2020-07-04-time-is.md  2020-07-09-silver-searcher.md  2020-07-11-response-size.md  2020-07-19-ansible-vendor.md  2020-07-25-blush.md  2020-07-29-bat-delta.md  2020-08-01-water-css.md  2020-08-09-gron.md  2020-08-15-pipx.md  2020-08-22-working-in-public.md  2020-08-31-shellcheck.md  2020-09-02-pathlib-cheat-sheet.md  2020-09-06-pathlib-snippets.md  2020-09-17-crontab-guru.md  2020-09-23-curl-json.md  2020-09-29-pihole.md  2020-10-06-find-exec.md  2020-10-20-markdown.md  2020-11-01-glob.md  2020-11-10-rich.md  2020-11-22-postgres-show-create.md  2020-11-26-three-psql-settings.md  2020-11-30-pip-20.3.md  2020-12-07-stdin-or-file.md  (+20 more)
categories/: ansible.xml  css.xml  csv.xml  curl.xml  dependencies.xml  devops.xml  django.xml  git.xml  (+18 more)
(+259 files in other folders)
