[tool.poetry]
name = "blogmarks"
version = "0.1.0"
description = "Handy links or snippets, and a sentence or two"
authors = ["chris48s <git@chris-shaw.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nikola = "^8.3.0"
tomli = "^2.0.1"
aiohttp = "^3.9.5"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
