[tool.poetry]
name = "blogmarks"
version = "0.1.0"
description = "Handy links or snippets, and a sentence or two"
authors = ["chris48s <git@chris-shaw.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
nikola = "^8.3.1"
tomli = "^2.0.1"
aiohttp = "^3.11.6"
watchdog = "^4.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
