[project]
name = "blogmarks"
version = "0.1.0"
description = "Handy links or snippets, and a sentence or two"
authors = [{name = "chris48s", email = "git@chris-shaw.dev"}]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "nikola==8.3.1",
    "tomli==2.0.1",
    "aiohttp==3.10.6",
    "watchdog==4.0.2"
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
